# Cpp11Concurrency

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
apps/: CMakeLists.txt
apps/LinkedInCourse/: 01_cpuWaster.cpp  02_scheduling.cpp  CMakeLists.txt
apps/chapter02/: CMakeLists.txt  launch_threads.cpp  thread_guard.cpp
cmake_stuff/: compileroptions.cmake  findDependencies.cmake  printInfo.cmake
libs/itemProcessor/: CMakeLists.txt
libs/itemProcessor/include/itemProcessor/: processor.h
libs/itemProcessor/src/: processor.cpp
libs/itemProcessor/tests/: CMakeLists.txt  testItemProcessor.cpp  testMain.cpp
